--- a/apps/gluetun.yaml
+++ b/apps/gluetun.yaml
@@ -5,7 +5,7 @@ services:
     security_opt:
       - no-new-privileges:true
     restart: ${UNIVERSAL_RESTART_POLICY:-unless-stopped}
-    profiles: [ "downloaders", "all" ] # Note: change profile to match routed services
+    profiles: [ "downloaders", "all" ] # Note: add profiles to match routed services
     networks:
       traefik:
     cap_add:
@@ -28,20 +28,21 @@ services:
       WIREGUARD_ADDRESSES: 10.2.0.2/32
       # SERVER_COUNTRIES: Netherlands
     labels:
-      - "traefik.enable=true"
+      traefik.enable: true
+
       # ===========
       # qBittorrent
       # ===========
       # Note: to access qBittorrent from other containers
       # host: gluetun, port: 8080
       # HTTP Routers
-      - "traefik.http.routers.gluetun-qbittorrent-rtr.entrypoints=websecure"
-      - "traefik.http.routers.gluetun-qbittorrent-rtr.rule=Host(`${SUBDOMAIN__QBITTORRENT}.${DOMAIN_NAME}`)"
+      traefik.http.routers.gluetun-qbittorrent-rtr.entrypoints: websecure
+      traefik.http.routers.gluetun-qbittorrent-rtr.rule: Host(`${SUBDOMAIN__QBITTORRENT}.${DOMAIN_NAME}`)
       # Middlewares
-      - "traefik.http.routers.gluetun-qbittorrent-rtr.middlewares=chain-oauth-google@file"
-      # HTTP Services
-      - "traefik.http.routers.gluetun-qbittorrent-rtr.service=gluetun-svc"
-      - "traefik.http.services.gluetun-svc.loadbalancer.server.port=8080"
+      traefik.http.routers.gluetun-qbittorrent-rtr.middlewares: chain-oauth-google@file
+      # HTTP Services  
+      traefik.http.routers.gluetun-qbittorrent-rtr.service: gluetun-svc
+      traefik.http.services.gluetun-svc.loadbalancer.server.port: 8080
       # ===========
       # end qBittorrent
       # ===========
