--- a/apps/chat-gpt-next-web.yaml
+++ b/apps/chat-gpt-next-web.yaml
@@ -4,22 +4,22 @@
 #######################################
 
 services:
-    chat-gpt-next-web:
-        container_name: chat-gpt-next-web
-        image: yidadaa/chatgpt-next-web:latest
-        profiles: ["miscellaneous", "all"]
-        networks:
-            traefik:
-        environment:
-            TZ: ${TZ}
-            OPENAI_API_KEY: ${OPENAI_API_KEY:-}
-            ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY:-}
-            CUSTOM_MODELS: -all,gpt-4o@OpenAI,gpt-4o-mini@OpenAI,claude-3-5-sonnet-20240620@Anthropic=claude-3-5-sonnet,claude-3-opus-20240229@Anthropic=claude-3-opus,claude-3-haiku-20240307@Anthropic=claude-3-haiku
-            HIDE_USER_API_KEY: ${HIDE_USER_API_KEY:-1}
-        labels:
-            traefik.enable: true
-            traefik.http.routers.chat-rtr.rule: Host(`${SUBDOMAIN__CHAT_GPT}.${DOMAIN_NAME}`)
-            traefik.http.routers.chat-rtr.service: chat-svc
-            traefik.http.services.chat-svc.loadbalancer.server.port: 3000
-            traefik.http.routers.chat-rtr.entrypoints: websecure
-            traefik.http.routers.chat-rtr.middlewares: chain-oauth-google@file
+  chat-gpt-next-web:
+    container_name: chat-gpt-next-web
+    image: yidadaa/chatgpt-next-web:latest
+    profiles: ["miscellaneous", "all"]
+    networks:
+      traefik:
+    environment:
+      TZ: ${TZ}
+      OPENAI_API_KEY: ${API_KEY__OPENAI:-}
+      ANTHROPIC_API_KEY: ${API_KEY__ANTHROPIC:-}
+      CUSTOM_MODELS: -all,gpt-4o@OpenAI,gpt-4o-mini@OpenAI,claude-3-5-sonnet-20240620@Anthropic=claude-3-5-sonnet,claude-3-opus-20240229@Anthropic=claude-3-opus,claude-3-haiku-20240307@Anthropic=claude-3-haiku
+      HIDE_USER_API_KEY: ${HIDE_USER_API_KEY:-1}
+    labels:
+      traefik.enable: true
+      traefik.http.routers.chat-rtr.rule: Host(`${SUBDOMAIN__CHAT_GPT}.${DOMAIN_NAME}`)
+      traefik.http.routers.chat-rtr.service: chat-svc
+      traefik.http.services.chat-svc.loadbalancer.server.port: 3000
+      traefik.http.routers.chat-rtr.entrypoints: websecure
+      traefik.http.routers.chat-rtr.middlewares: chain-oauth-google@file
