--- a/apps/chatgpt-in-slack.yaml
+++ b/apps/chatgpt-in-slack.yaml
@@ -4,19 +4,19 @@
 #######################################
 
 services:
-    chatgpt-in-slack:
-        container_name: chatgpt-in-slack
-        image: juftin/chatgpt-in-slack:latest
-        profiles: [ "miscellaneous", "all" ]
-        networks:
-            internal:
-        platform: linux/amd64
-        environment:
-            SLACK_BOT_TOKEN: ${SLACK_BOT_TOKEN}
-            SLACK_APP_TOKEN: ${SLACK_APP_TOKEN}
-            OPENAI_API_KEY: ${OPENAI_API_KEY}
-            OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4-turbo-preview}
-            TRANSLATE_MARKDOWN: ${TRANSLATE_MARKDOWN:-true}
-            SLACK_APP_LOG_LEVEL: ${SLACK_APP_LOG_LEVEL:-INFO}
-            TZ: ${TZ}
-        restart: ${UNIVERSAL_RESTART_POLICY:-unless-stopped}
+  chatgpt-in-slack:
+    container_name: chatgpt-in-slack
+    image: juftin/chatgpt-in-slack:latest
+    profiles: [ "miscellaneous", "all" ]
+    networks:
+      internal:
+    platform: linux/amd64
+    environment:
+      SLACK_BOT_TOKEN: ${TOKEN__SLACK_BOT}
+      SLACK_APP_TOKEN: ${TOKEN__SLACK_APP}
+      OPENAI_API_KEY: ${TOKEN__OPENAI}
+      OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4-turbo-preview}
+      TRANSLATE_MARKDOWN: ${TRANSLATE_MARKDOWN:-true}
+      SLACK_APP_LOG_LEVEL: ${SLACK_APP_LOG_LEVEL:-INFO}
+      TZ: ${TZ}
+    restart: ${UNIVERSAL_RESTART_POLICY:-unless-stopped}
