--- a/apps/duckdns.yaml
+++ b/apps/duckdns.yaml
@@ -4,20 +4,20 @@
 #######################################
 
 services:
-    duckdns:
-        container_name: duckdns
-        image: lscr.io/linuxserver/duckdns:latest
-        profiles: [ "traefik", "core", "all" ]
-        environment:
-            PUID: ${PUID}
-            PGID: ${PGID}
-            TZ: ${TZ}
-            SUBDOMAINS: ${DUCKDNS_SUBDOMAIN}
-            TOKEN: ${DUCKDNS_TOKEN}
-        networks:
-            internal:
-        security_opt:
-          - no-new-privileges:true
-        restart: always
-        labels:
-            com.ouroboros.enable: "true"
+  duckdns:
+    container_name: duckdns
+    image: lscr.io/linuxserver/duckdns:latest
+    profiles: [ "traefik", "core", "all" ]
+    environment:
+      PUID: ${PUID}
+      PGID: ${PGID}
+      TZ: ${TZ}
+      SUBDOMAINS: ${DUCKDNS_SUBDOMAIN}
+      TOKEN: ${DUCKDNS_TOKEN}
+    networks:
+      internal:
+    security_opt:
+      - no-new-privileges:true
+    restart: always
+    labels:
+      com.ouroboros.enable: true
