--- a/apps/flaresolverr.yaml
+++ b/apps/flaresolverr.yaml
@@ -4,10 +4,10 @@ services:
     image: ghcr.io/flaresolverr/flaresolverr:latest
     container_name: flaresolverr
     environment:
-    - LOG_LEVEL=${LOG_LEVEL:-info}
-    - LOG_HTML=${LOG_HTML:-false}
-    - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
-    - TZ=${TZ}
+      LOG_LEVEL: ${LOG_LEVEL:-info}
+      LOG_HTML: ${LOG_HTML:-false}
+      CAPTCHA_SOLVER: ${CAPTCHA_SOLVER:-none}
+      TZ: ${TZ}
     restart: ${UNIVERSAL_RESTART_POLICY:-unless-stopped}
     networks:
       traefik:
