--- a/.env-example
+++ b/.env-example
@@ -7,6 +7,7 @@ ADMIN_USER="admin"
 TZ="Australia/Hobart"
 PUID="1000" # id -u
 PGID="1000" # id -g
+UMASK="002" # umask
 
 UNIVERSAL_RESTART_POLICY="unless-stopped"
 
@@ -59,6 +60,7 @@ PASSWORD__TECHNITIUM="foobarbaz"
 # SUBDOMAINS
 ##################################################################
 
+SUBDOMAIN__BAZARR="bazarr"
 SUBDOMAIN__CALIBRE_WEB="calibre-web"
 SUBDOMAIN__CALIBRE="calibre"
 SUBDOMAIN__CHAT_GPT="chat"
